Hosted AMP pages - only import hosted css on hosted pages

--- a/common/app/views/fragments/amp/stylesheets/main.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/main.scala.html
@@ -281,4 +281,7 @@
     @* proper inlined AMP styles *@
     @Html(common.Assets.css.amp)
 
+    @if(page.metadata.isHosted) {
+        @Html(common.Assets.css.hostedAmp)
+    }
 </style>
