--- a/static/src/stylesheets/head.hosted-amp.scss
+++ b/static/src/stylesheets/head.hosted-amp.scss
@@ -12,4 +12,4 @@
    ========================================================================== */
 
 @include grid-system;
-@import 'amp/_header';
+@import 'amp/_hosted';
