--- a/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
@@ -65,7 +65,8 @@
 
                                 </div>
                                 <div class="hosted__standfirst">
-                                    <div class="hosted__terms">​Hosted content is used to describe content that is paid for and supplied by the advertiser.
+                                    <div class="hosted__terms">​​Hosted content is used to describe content that is paid for and supplied by the advertiser. Find out more with our
+                                        <button on="tap:hosted-about-lightbox" class="hosted__terms-link hosted-tone">commercial content explainer</button>.
                                     </div>
                                 </div>
                             </div>
