Removed duplicate css

--- a/common/app/views/fragments/imageFigure.scala.html
+++ b/common/app/views/fragments/imageFigure.scala.html
@@ -112,7 +112,7 @@
                 <input type="checkbox" id="show-caption" class="mobile-only u-h">
 
                 <label class="mobile-only reveal-caption reveal-caption--img" for="show-caption">
-                    @fragments.inlineSvg("information", "icon", List("reveal-caption-icon", "centered-icon", "rounded-icon"))
+                    @fragments.inlineSvg("information", "icon", List("reveal-caption-icon", "centered-icon"))
                 </label>
 
                 <figcaption class="caption caption--main caption--img" itemprop="description">
