--- a/commercial/app/views/hosted/guardianHostedHeader.scala.html
+++ b/commercial/app/views/hosted/guardianHostedHeader.scala.html
@@ -18,18 +18,18 @@
                 <button on="tap:hosted-about-lightbox" class="hosted__tooltip-label">About</button>
 
                 <amp-lightbox id="hosted-about-lightbox" layout="nodisplay">
-                    <div class="lightbox">
+                    <div class="hosted__lightbox">
                         <div class="survey-container" data-link-name="hosted page about overlay" role="dialog" aria-label="about hosted content">
                             <h3 class="survey-text__header">
                                 Advertiser content
                                 <div class="survey-close">
-                                    <button class="site-message__close-btn" data-link-name="hide about hosted message" on="tap:hosted-about-lightbox.close">
-                                        @fragments.inlineSvg("cross", "icon", List("inline-cross inline-icon "))
+                                    <button class="hosted__lightbox-close-btn" data-link-name="hide about hosted message" on="tap:hosted-about-lightbox.close">
+                                        @fragments.inlineSvg("cross", "icon", List("inline-cross hosted__lightbox-close"))
                                     </button>
                                 </div>
                             </h3>
                             <div class="survey-icon">
-                                @fragments.inlineSvg("paid-content", "commercial")
+                                @fragments.inlineSvg("paid-content", "commercial", List("hosted__lightbox-image"))
                             </div>
                             <div class="survey-text">
                                 <p class="survey-text__paragraph">
@@ -55,7 +55,7 @@
         <div class="hosted-header__spacer"></div>
         <a href="http://www.theguardian.com" data-link-name="guardian-logo-top-right" class="hosted__glogo">
             <p class="hosted__glogotext">Hosted by</p>
-            @fragments.inlineSvg("guardian-logo-320", "logo")
+            @fragments.inlineSvg("guardian-logo-320", "logo", List("hosted__guardian-logo"))
         </a>
     </div>
 </div>
