--- a/static/src/stylesheets/amp/_hosted.scss
+++ b/static/src/stylesheets/amp/_hosted.scss
@@ -6,12 +6,12 @@ $header-height: 48px;
 
 .hosted__glogo {
     display: inline-block;
-    padding: 4px 10px;
-    background-color: #005689;
+    padding: $gs-baseline/3 $gs-gutter/2;
+    background-color: $guardian-brand;
     text-align: right;
 }
 
-.hosted__glogo .inline-logo__svg {
+.hosted__guardian-logo__svg {
     fill: #ffffff;
     width: 115px;
     height: 40px;
@@ -67,7 +67,7 @@ $header-height: 48px;
     padding-top: 140px;
     position: relative;
     z-index: 1;
-    margin-left: 20px;
+    margin-left: $gs-gutter;
 }
 
 .hosted__cta-btn-wrapper {
@@ -224,6 +224,8 @@ $header-height: 48px;
 }
 
 .hosted__header {
+    $text-colour: #e3e3e3;
+
     .survey-container {
         position: absolute;
         top: 20px;
@@ -235,56 +237,37 @@ $header-height: 48px;
         overflow: scroll;
         max-width: #{600 - 2 * $gs-gutter};
         margin: 0 auto;
-
-        .survey-icon {
-            text-align: center;
-            padding-top: 16px;
-            background-color: #e3e3e3;
-            line-height: 10px;
-        }
-
-        .inline-paid-content__svg {
-            width: 240px;
-            height: 154px;
-        }
-
-        .survey-text__header {
-            font-size: 24px;
-            font-weight: bold;
-            margin: 0;
-            padding: 6px 0 0 10px;
-            height: 44px;
-            text-align: left;
-        }
-
-        .survey-text {
-            padding: 4px 10px 0;
-            border-left: 1px solid #e3e3e3;
-            border-right: 1px solid #e3e3e3;
-            border-bottom: 1px solid #e3e3e3;
-            background-color: #ffffff;
-        }
-
-        .survey-text__paragraph {
-            font-size: 16px;
-            text-align: left;
-            margin: 0;
-            padding-bottom: 10px;
-        }
-
     }
-    .site-message__close-btn {
-        font-size: 13px;
-        line-height: 18px;
-        border-radius: 1000px;
-        display: block;
-        padding: 0;
-        height: 42px;
-        width: 42px;
-        background: transparent;
-        border: 1px solid #333333;
-        color: #ffffff;
-        float: right;
+
+    .survey-icon {
+        text-align: center;
+        padding-top: 16px;
+        background-color: $text-colour;
+        line-height: 10px;
+    }
+
+    .survey-text__header {
+        font-size: 24px;
+        font-weight: bold;
+        margin: 0;
+        padding: 6px 0 0 10px;
+        height: 44px;
+        text-align: left;
+    }
+
+    .survey-text {
+        padding: $gs-baseline/3 $gs-gutter/2 0;
+        border-left: 1px solid $text-colour;
+        border-right: 1px solid $text-colour;
+        border-bottom: 1px solid $text-colour;
+        background-color: #ffffff;
+    }
+
+    .survey-text__paragraph {
+        font-size: 16px;
+        text-align: left;
+        margin: 0;
+        padding-bottom: 10px;
     }
 
     .survey-close {
@@ -292,23 +275,41 @@ $header-height: 48px;
         cursor: pointer;
         top: 4px;
         right: 8px;
-
     }
+}
 
-    .inline-cross__svg {
-        fill: #333333;
-        margin-top: 4px;
-        width: 20px;
-        height: 20px;
-    }
+.hosted__lightbox {
+    background: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: $zindex-overlay;
+}
 
-    .lightbox {
-        background: rgba(0, 0, 0, 0.8);
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: $zindex-overlay;
-    }
+.hosted__lightbox-close-btn {
+    font-size: 13px;
+    line-height: 18px;
+    border-radius: 1000px;
+    display: block;
+    padding: 0;
+    height: 42px;
+    width: 42px;
+    background: transparent;
+    border: 1px solid #333333;
+    color: #ffffff;
+    float: right;
+}
+
+.hosted__lightbox-close__svg {
+    fill: #333333;
+    margin-top: 4px;
+    width: 20px;
+    height: 20px;
+}
+
+.hosted__lightbox-image__svg {
+    width: 240px;
+    height: 154px;
 }
 
 .hosted__popup.popup {
@@ -832,11 +833,13 @@ $header-height: 48px;
 
     .survey-text__header {
         color: #ffffff;
-        .site-message__close-btn {
-            border-color: #ffffff;
-        }
-        .inline-cross__svg {
-            fill: #ffffff;
-        }
+    }
+
+    .hosted__lightbox-close-btn {
+        border-color: #ffffff;
+    }
+
+    .hosted__lightbox-close__svg {
+        fill: #ffffff;
     }
 }
