--- a/applications/app/views/fragments/paidAdvertisementGalleryBody.scala.html
+++ b/applications/app/views/fragments/paidAdvertisementGalleryBody.scala.html
@@ -75,14 +75,7 @@
 
     @if(!page.gallery.content.shouldHideAdverts && rowNum % adInterval == 0) {
         <li class="gallery2__item gallery2__item--advert">
-            <div class="gallery2__img-container">
-                @fragments.commercial.standardAd(
-                    s"inline$rowNum",
-                    Seq("gallery-inline", "dark"),
-                    Map(
-                        "mobile" -> Seq("1,1", "300,250", "fluid")
-                    )
-                )
+            <div class="gallery2__img-container js-gallery-slot">
             </div>
         </li>
     }
